--- a/src/main/resources/static/templates/snippets/login.dialog.html
+++ b/src/main/resources/static/templates/snippets/login.dialog.html
@@ -3,13 +3,16 @@
     <form name="loginForm" data-ng-submit="vm.handleLoginSubmit();">
 
         <md-toolbar>
-            <div class="md-toolbar-tools">
+            <div class="md-toolbar-tools md-flex">
                 <h2>Login</h2>
-                <p>{{vm.message}}</p>
-                <span flex></span>
                 <md-button type="button" class="md-icon-button" ng-click="vm.handleLoginCancel(); $event.stopPropagation();">
                     <md-icon md-svg-icon="img/icons/ic_close_24px.svg" aria-label="Close dialog"></md-icon>
                 </md-button>
+            </div>
+        </md-toolbar>
+        <md-toolbar class="md-warn" ng-if="vm.message != null">
+            <div class="md-toolbar-tools">
+                <span class="md-flex">{{vm.message}}</span>
             </div>
         </md-toolbar>
 
@@ -29,13 +32,10 @@
 
         <md-dialog-actions layout="row">
             <span flex></span>
-            <md-button type="submit" class="md-primary"
-                       ng-class="{'md-raised md-hue-1': (loginForm.$dirty && loginForm.$valid) }"
-                       aria-label="OK">
+            <md-button type="submit" class="md-primary" ng-class="{'md-raised md-hue-1': (loginForm.$dirty && loginForm.$valid) }" aria-label="OK">
                 OK
             </md-button>
-            <md-button type="button" ng-click="vm.handleLoginCancel(); $event.stopPropagation();"
-                       aria-label="Cancel">
+            <md-button type="button" ng-click="vm.handleLoginCancel(); $event.stopPropagation();" aria-label="Cancel">
                 Cancel
             </md-button>
         </md-dialog-actions>
